Update 디자인 패턴 간단 정리.md

--- a/디자인 패턴 간단 정리.md
+++ b/디자인 패턴 간단 정리.md
@@ -1,7 +1,32 @@
 # 디자인 패턴 간단 정리
 
-[TOC]
-
+- [디자인 패턴 간단 정리](#디자인 패턴 간단 정리)
+- [생성 패턴 (Creation)](#생성-패턴-(Creation))
+  * [팩토리 패턴(Factory)](#-------factory-)
+  * [팩토리 메소드 패턴(Factory Method)](#-----------factory-method-)
+  * [추상화 팩토리 패턴(Abstract Factroy)](#-----------abstract-factroy-)
+  * [빌더 패턴(Builder)](#------builder-)
+  * [싱글톤 패턴(Singleton)](#-------singleton-)
+  * [프로토타입 패턴(ProtoType)](#---------prototype-)
+- [구조 패턴(Structural)](#------structural-)
+  * [어댑터 패턴(Adapter)](#-------adapter-)
+  * [프록시 패턴(Proxy)](#-------proxy-)
+  * [파사드 패턴(Facade)](#-------facade-)
+  * [데코레이터 패턴(Decorator)](#---------decorator-)
+  * [브릿지 패턴(Bridge)](#-------bridge-)
+  * [플라이 웨이트 패턴(FlyWeight)](#-----------flyweight-)
+  * [컴포짓 패턴(Composite)](#-------composite-)
+- [행동 패턴(Behavior)](#------behavior-)
+  * [전략 패턴(Strategy)](#------strategy-)
+  * [상태 패턴(State)](#------state-)
+  * [템플릿 메소드 패턴(Template Method)](#-----------template-method-)
+  * [커맨드 패턴(Command)](#-------command-)
+  * [책임 연쇄 패턴(Chain of Responsibility)](#---------chain-of-responsibility-)
+  * [옵저버 패턴(Observer)](#-------observer-)
+  * [메멘토 패턴(Memento)](#-------memento-)
+  * [중재자 패턴(Mediator)](#-------mediator-)
+  * [방문자 패턴(Visitor)](#-------visitor-)
+  * [반복자 패턴(Iterator)](#-------iterator-)
 
 
 # 생성 패턴 (Creation)
