Update 디자인 패턴 간단 정리.md

--- a/디자인 패턴 간단 정리.md
+++ b/디자인 패턴 간단 정리.md
@@ -2,7 +2,7 @@
 
 - [디자인 패턴 간단 정리](#디자인 패턴 간단 정리)
 - [생성 패턴 (Creation)](#생성-패턴-(Creation))
-  * [팩토리 패턴(Factory)](#-------factory-)
+  * [팩토리 패턴(Factory)](#팩토리-패턴-factory-)
   * [팩토리 메소드 패턴(Factory Method)](#-----------factory-method-)
   * [추상화 팩토리 패턴(Abstract Factroy)](#-----------abstract-factroy-)
   * [빌더 패턴(Builder)](#------builder-)
