--- a/디자인 패턴 간단 정리.md
+++ b/디자인 패턴 간단 정리.md
@@ -1,45 +1,48 @@
 # 디자인 패턴 간단 정리
 
-- [디자인 패턴 간단 정리](#디자인 패턴 간단 정리)
-- [생성 패턴 (Creation)](#생성-패턴-(Creation))
-  * [팩토리 패턴(Factory)](#팩토리-패턴-factory-)
-  * [팩토리 메소드 패턴(Factory Method)](#-----------factory-method-)
-  * [추상화 팩토리 패턴(Abstract Factroy)](#-----------abstract-factroy-)
-  * [빌더 패턴(Builder)](#------builder-)
-  * [싱글톤 패턴(Singleton)](#-------singleton-)
-  * [프로토타입 패턴(ProtoType)](#---------prototype-)
-- [구조 패턴(Structural)](#------structural-)
-  * [어댑터 패턴(Adapter)](#-------adapter-)
-  * [프록시 패턴(Proxy)](#-------proxy-)
-  * [파사드 패턴(Facade)](#-------facade-)
-  * [데코레이터 패턴(Decorator)](#---------decorator-)
-  * [브릿지 패턴(Bridge)](#-------bridge-)
-  * [플라이 웨이트 패턴(FlyWeight)](#-----------flyweight-)
-  * [컴포짓 패턴(Composite)](#-------composite-)
-- [행동 패턴(Behavior)](#------behavior-)
-  * [전략 패턴(Strategy)](#------strategy-)
-  * [상태 패턴(State)](#------state-)
-  * [템플릿 메소드 패턴(Template Method)](#-----------template-method-)
-  * [커맨드 패턴(Command)](#-------command-)
-  * [책임 연쇄 패턴(Chain of Responsibility)](#---------chain-of-responsibility-)
-  * [옵저버 패턴(Observer)](#-------observer-)
-  * [메멘토 패턴(Memento)](#-------memento-)
-  * [중재자 패턴(Mediator)](#-------mediator-)
-  * [방문자 패턴(Visitor)](#-------visitor-)
-  * [반복자 패턴(Iterator)](#-------iterator-)
+- [디자인 패턴 간단 정리](#------------)
+- [Creation Pattern](#creation-pattern)
+  * [Factory Pattern](#factory-pattern)
+  * [Factory Method Pattern](#factory-method-pattern)
+  * [Abstract Factroy Pattern](#abstract-factroy-pattern)
+  * [Builder Pattern](#builder-pattern)
+  * [Singleton Pattern](#singleton-pattern)
+  * [ProtoType Pattern](#prototype-pattern)
+- [Structural Pattern](#structural-pattern)
+  * [Adapter Pattern](#adapter-pattern)
+  * [Proxy Pattern](#proxy-pattern)
+  * [Facade Pattern](#facade-pattern)
+  * [Decorator Pattern](#decorator-pattern)
+  * [Bridge Pattern](#bridge-pattern)
+  * [FlyWeight Pattern](#flyweight-pattern)
+  * [Composite Pattern](#composite-pattern)
+- [Behavior Pattern](#behavior-pattern)
+  * [Strategy Pattern](#strategy-pattern)
+  * [State Pattern](#state-pattern)
+  * [Template Method Pattern](#template-method-pattern)
+  * [Command Pattern](#command-pattern)
+  * [Chain of Responsibility Pattern](#chain-of-responsibility-pattern)
+  * [Observer Pattern](#observer-pattern)
+  * [Memento Pattern](#memento-pattern)
+  * [Mediator Pattern](#mediator-pattern)
+  * [Visitor Pattern](#visitor-pattern)
+  * [Iterator Pattern](#iterator-pattern)
 
 
-# 생성 패턴 (Creation)
 
-## 팩토리 패턴(Factory)
+# Creation Pattern
+
+## Factory Pattern
+
+- 팩토리 패턴
 
 - 말 그대로 '공장' 역할을 함
+
 - 팩토리에 본인이 원하는 객체의 정보를 전달하면 객체를 대신 만들어줌
 
 - 복잡한 오브젝트 생성 과정을 클라이언트가 직접 다룰 필요가 없음
+  
   - 즉, 오브젝트 생성이 복잡할 경우 사용하면 좋다.
-
-
 
 ```java
 public interface Animal {
@@ -69,25 +72,21 @@ public class AnimalFactory {
         } else {
             return null;
         }
-        
+
         return null;
     }
 }
 ```
 
+## Factory Method Pattern
 
-
-
-
-
-
-## 팩토리 메소드 패턴(Factory Method)
+- 팩토리 메소드 패턴
 
 - 팩토리 패턴을 확장시켰다고 생각하면 쉽다.
+
 - 만약 팩토리에 기능을 추가하고 싶으면 팩토리 메소드를 사용하면 된다.
+
 - 그러나 실무에서 이름은 
-
-
 
 ```java
 public interface Animal {
@@ -113,20 +112,20 @@ public interface AnimalFactory {
 }
 
 public class CatFactory implements AnimalFactory {
-    
+
     int count = 0;
-    
+
     @Override
     public Animal createAnimal() {
         count++;
         return new Cat();
     }
-    
+
     // 이 부분이 팩토리 메소드
     public void catCount() {
         return this.count;
     }
-    
+
 }
 
 public class DogFactory implements AnimalFactory {
@@ -134,37 +133,34 @@ public class DogFactory implements AnimalFactory {
     public Animal createAnimal() {
         return new Dog();
     }
-    
+
     public void makeWings() {
         System.out.println("dog wings added")
     }
 }
 ```
 
+## Abstract Factroy Pattern
 
-
-
-
-## 추상화 팩토리 패턴(Abstract Factroy)
+- 추상화 팩토리 패턴
 
 - 위에서는 간단하게 동물을 만들어주는 공장을 만들었다.
+
 - 추상화 팩토리패턴은 '자동차'를 만드는 Factory가 있을 때 자동차의 argument들을 추상화된 class로 만들어 자유자재로 부품을 끼어주는 역할을 하게 해준다.
-
-
 
 [팩토리 메소드 패턴 보러가기](https://github.com/takm124/DesignPattern/blob/main/src/Factory/Factory%20Pattern.md)
 
 
 
-## 빌더 패턴(Builder)
+## Builder Pattern
+
+- 빌더 패턴
 
 - 오브젝트 생성이 복잡할 경우 간단하게 만들어준다.
 
 - 예시의 propery는 3가지 뿐이지만 다양한 조합과 argument들이 필요한 경우에는 빌더의 도움을 받으면 좋다.
 
 - Builder를 만들고 상속받아 확장시켜 사용하는 방법도 있다.
-
-
 
 ```java
 public class Cat {
@@ -177,7 +173,7 @@ public class Cat {
         this.weight = weight;
         this.color = color;
     }
-    
+
     public void toString() {
         return System.out.println(height + "cm " + weight + "g " + color)
     }
@@ -188,33 +184,31 @@ public class CatBuilder {
     int weight;
     String color;
     Cat cat;
-    
+
     public void setHeight(int height) {
         this.height = height;
     }
-    
+
     public void setWeight(int weight) {
         this.weight = weight;
     }
-    
+
     public void setColor(String color) {
         this.color = color;
     }
-    
+
     public Cat build() {
         cat = new Cat(height, weight, color);
         return cat;
     }
-    
-    
+
+
 }
 ```
 
+## Singleton Pattern
 
-
-
-
-## 싱글톤 패턴(Singleton)
+- 싱글톤 패턴
 
 - 프로세스 진행 중 오직 하나의 오브젝트만을 허용하는 패턴
 
@@ -222,12 +216,12 @@ public class CatBuilder {
 
 ```java
 public class Cat {
-	String name;
-    
+    String name;
+
     public Cat(String name) {
         this.name = name;
     }
-    
+
     public void speak() {
         System.out.println(name + " : meow");
     }
@@ -235,10 +229,10 @@ public class Cat {
 
 
 public class Singleton {
-	private static Cat cat;
-    
+    private static Cat cat;
+
     private Cat() {}
-    
+
     public Cat getInstance() {
         if (cat == null) {
             cat = new Cat(kitty);
@@ -248,30 +242,27 @@ public class Singleton {
 }
 ```
 
+## ProtoType Pattern
 
-
-
-
-## 프로토타입 패턴(ProtoType)
+- 프로토타입 패턴
 
 - 기존의 객체를 복사해서 새로운 객체를 생성하는 패턴이다.
+
 - 앞선 객체의 속성을 모두 가져와 본인이 원하는 부분만 커스터마이징하여 변형을 줄 수 있다.
+
 - 자바에서는 Cloneable 인터페이스를 상속받아 사용한다.
+  
   - clone을 재정의 해주어야함
 
 - 원본 객체를 안전하게 보호하기 위해 사용한다.
 
+# Structural Pattern
 
+## Adapter Pattern
 
-
-
-# 구조 패턴(Structural)
-
-## 어댑터 패턴(Adapter)
+- 어댑터 패턴
 
 - 클래스의 인터페이스를 다른 인터페이스로 사용 할 수 있게 해주는 패턴
-
-
 
 ```java
 public interface Animal {
@@ -314,14 +305,14 @@ public class Fish {
 
 public class FishAdapter implements Animal{
     Fish fish;
-    
+
     public FishAdapter(Fish fish) {
         fish = new Fish();
     }
-    
+
     @Override
     public void walk { 
-    	fish.swim();
+        fish.swim();
     }
 }
 
@@ -333,33 +324,30 @@ fa.walk;
 // fish swimming을 출력할 것
 ```
 
+## Proxy Pattern
 
-
-
-
-## 프록시 패턴(Proxy)
+- 프록시 패턴
 
 - 실제 네트워크의 프록시와 같은 역할을 한다.
 
 - 클라이언트가 오브젝트를 직접 사용하는 것이 아닌 프록시 오브젝트를 두어 사용한다.
+  
   - 프록시가 argument를 확인하여 프록시의 기능을 한 뒤 활용 가능 (캐쉬, 로그 등)
-
-
 
 ```java
 public class Cat {
-	public void speak() {
+    public void speak() {
         System.out.println("meow");
     }
 }
 
 public class CatProxy {
     Cat cat;
-    
+
     public CatProxy() {
         this.cat = new Cat();
     }
-    
+
     public void speak() {
         System.out.println("Before speak") // validity check
         cat.speak();
@@ -368,41 +356,38 @@ public class CatProxy {
 }
 ```
 
+## Facade Pattern
 
-
-
-
-## 파사드 패턴(Facade)
+- 파사드 패턴
 
 - 파사드 = 건물의 앞면을 의미함
+
 - 코드의 복잡함은 뒤에 숨기고 간단한것만 앞으로 보여준다는 의미
+
 - 복잡한 클래스와 라이브러리를 사용해 오브젝트를 만들어야 하는 경우 Facade 클래스를 만들어서 손쉽게 사용한다.
 
+## Decorator Pattern
 
-
-
-
-## 데코레이터 패턴(Decorator)
+- 데코레이터 패턴
 
 - 오브젝트를 꾸며주는 역할
+  
   - 꾸민다 = 기능을 추가해준다. but,  SOLID에서 벗어나지 않게
-
-
 
 [데코레이터 패턴 보러가기](https://github.com/takm124/DesignPattern/blob/main/src/Decorator/Decorator.md)
 
+## Bridge Pattern
 
-
-
-
-## 브릿지 패턴(Bridge)
+- 브릿지 패턴
 
 - 기능계층과 추상계층을 분리해서 사용할 수 있다.
 
 - 동물(Animal) = 추상계층
+
 - 탈것(Vehicle) = 기능계층이라 생각하고 다음 구조를 보자
 
 - 실제로 동물- 탈것으로 분리하기 보다는, Car(추상계층) - Engine(기능계층) 으로 분리해서 이해하면 좀더 편하다
+  
   - Car의 종류는 제네시스, 포르쉐 등이 될 수 있고, 엔진의 종류를 바꿔가며 차에 적용시킬 수 있을 것이다.
 
 ```java
@@ -429,11 +414,11 @@ public class Dog implements Animal {
 // 기능 계층
 public abstract Vehicle {
     private Animal animal;
-    
+
     protected Vehicle(Animal animal) {
         this.animal = animal;
     }
-    
+
     public void start() {
         animal.speak();
     }
@@ -443,7 +428,7 @@ public class Boat extends Vehicle {
     protected Boat(Animal animal) {
         super(animal);
     }
-    
+
     @Override
     public void start() {
         System.out.println("sails a Boat ")
@@ -454,7 +439,7 @@ public class Car extends Vehicle {
     protected Car(Animal animal) {
         super(animal);
     }
-    
+
     @Override
     public void start() {
         System.out.println("Drive a car")
@@ -464,17 +449,14 @@ public class Car extends Vehicle {
 // Animal 객체를 생성하고 Vehicle에 넘겨주면 사용 가능하다.
 ```
 
+## FlyWeight Pattern
 
-
-
-
-## 플라이 웨이트 패턴(FlyWeight)
+- 플라이 웨이트 패턴
 
 - 어떤 클래스의 인스턴스 한 개만 갖고 여러 개의 '가상 인스턴스'를 제공하고 싶을때 사용하는 패턴
+  
   - 쓸 때 없는 new의 사용을 줄여준다
   - 가상 인스턴스를 한 곳에 모아놓고 컨트롤 가능하다.
-
-
 
 - Java의 String Constant Pool을 생각하면 편하다.
   - 이미 있는 String 문자를 똑같이 가져온다.
@@ -486,98 +468,91 @@ public interface Flyweight {
 
 public class StringLiteral implements Flyweight {
 
-	private String data;
-	
-	public StringLiteral(String data) {
-		this.data = data;
-	}
+    private String data;
 
-	public String getData() {
-		return data;
-	}
+    public StringLiteral(String data) {
+        this.data = data;
+    }
 
-	public void setData(String data) {
-		this.data = data;
-	}
+    public String getData() {
+        return data;
+    }
+
+    public void setData(String data) {
+        this.data = data;
+    }
 }
 
 public class StringConstantPool {
-	
-	Map<String, Flyweight> pool;
-	
-	public StringConstantPool() {
-		pool = new HashMap<>();
-	}
-	
-	public Flyweight getFlyweight(String key) {
-		Flyweight flyweight = pool.get(key);
-		
-		if (flyweight == null) {
-			flyweight = new StringLiteral(key);
-			pool.put(key, flyweight);
-		}
-		
-		return flyweight;
-	}
+
+    Map<String, Flyweight> pool;
+
+    public StringConstantPool() {
+        pool = new HashMap<>();
+    }
+
+    public Flyweight getFlyweight(String key) {
+        Flyweight flyweight = pool.get(key);
+
+        if (flyweight == null) {
+            flyweight = new StringLiteral(key);
+            pool.put(key, flyweight);
+        }
+
+        return flyweight;
+    }
 }
 
 public class Client {
 
-	public static void main(String[] args) {
-		StringConstantPool stringConstantPool = new StringConstantPool();
-		System.out.println(stringConstantPool.getFlyweight("Hello"));
-		System.out.println(stringConstantPool.getFlyweight("Hello World"));
-		System.out.println(stringConstantPool.getFlyweight("Hello"));
-		System.out.println(stringConstantPool.getFlyweight("Hello"));
-		System.out.println(stringConstantPool.getFlyweight("Hello world"));
-		System.out.println(stringConstantPool.getFlyweight("Hello World"));	
-	}
+    public static void main(String[] args) {
+        StringConstantPool stringConstantPool = new StringConstantPool();
+        System.out.println(stringConstantPool.getFlyweight("Hello"));
+        System.out.println(stringConstantPool.getFlyweight("Hello World"));
+        System.out.println(stringConstantPool.getFlyweight("Hello"));
+        System.out.println(stringConstantPool.getFlyweight("Hello"));
+        System.out.println(stringConstantPool.getFlyweight("Hello world"));
+        System.out.println(stringConstantPool.getFlyweight("Hello World"));    
+    }
 }
 ```
 
+## Composite Pattern
 
-
-
-
-## 컴포짓 패턴(Composite)
+- 컴포짓 패턴
 
 - 추후 정리 예정
 
+# Behavior Pattern
 
+## Strategy Pattern
 
-
-
-# 행동 패턴(Behavior)
-
-## 전략 패턴(Strategy)
+- 전략 패턴
 
 - SOLID의 Open-Closed와 같은 의미임
 
 - 런타임시에 행동 객체를 결정하여 작동하게끔 한다.
 
-
-
 [전략패턴 보러가기](https://github.com/takm124/DesignPattern/blob/main/src/Strategy/StrategyPattern.md)
 
+## State Pattern
 
-
-## 상태 패턴(State)
+- 상태 패턴
 
 - 오브젝트의 상태가 있다면 사용할 수 있다.
+
 - 신호등을 예시로 해보자 (빨강, 녹색 중 하나의 상태만 가지는 오브젝트이다.)
-
-
 
 ```java
 // 상태 패턴을 사용하지 않았을 때
 
 public class TrafficLight {
     String state = "Green";
-    
+
     public void setLight(String light) {
         this.state = light;
     }
-    
+
     public void speak() {
         if (state.Equals("Green")) {
             System.out.println("green light");
@@ -585,14 +560,14 @@ public class TrafficLight {
             System.out.println("red light");
         }
     }
-    
+
     public void wait() {
         System.out.println("wait... the light changed");
-		
+
         if (state.Equals("Green")) {
             state = "Red"
         } else if (State.Equals("Red")) {
-			state = "Green";
+            state = "Green";
         }
     }
 }
@@ -601,15 +576,15 @@ public class TrafficLight {
 // 상태 패턴 사용
 public class TrafficLight {
     State state = new GreenLight();
-    
+
     public void setState(State state) {
         this.state = state;
     }
-    
+
     public void speak() {
         this.state.speak();
     }
-    
+
     public void wait() {
         this.state.wait();
     }
@@ -625,10 +600,10 @@ public class GreenLight implements State {
     public void speak() {
         System.out.println("green light");
     }
-    
+
     @Override
     public void wait(TrafficLight trafficLight) {
-    	System.out.println("wait... the light changed");
+        System.out.println("wait... the light changed");
         trafficLight.setState(new RedLight());
     }
 }
@@ -638,63 +613,62 @@ public class RedLight implements State {
     public void speak() {
         System.out.println("Red light");
     }
-    
+
     @Override
     public void wait(TrafficLight trafficLight) {
-    	System.out.println("wait... the light changed");
+        System.out.println("wait... the light changed");
         trafficLight.setState(new GreenLight());
     }
 }
-
 ```
 
+## Template Method Pattern
 
-
-
-
-## 템플릿 메소드 패턴(Template Method)
+- 템플릿 메소드 패턴
 
 - 클래스의 메소드들이 템플릿으로 제공되는 패턴
+
 - 선생님의 동작은 inside - attendance - teach - outside 순서이다.
+  
   - teach를 제외한 동작이 모두 반복적이므로 추상클래스를 만들고 teach만 재정의 하게끔 만든다.
 
 ```java
 //추상 클래스 선생님
 abstract class Teacher{
-	
+
     public void start_class() {
         inside();
         attendance();
         teach();
         outside();
     }
-	
+
     // 공통 메서드
     public void inside() {
         System.out.println("선생님이 강의실로 들어옵니다.");
     }
-    
+
     public void attendance() {
         System.out.println("선생님이 출석을 부릅니다.");
     }
-    
+
     public void outside() {
         System.out.println("선생님이 강의실을 나갑니다.");
     }
-    
+
     // 추상 메서드
     abstract void teach();
 }
- 
+
 // 국어 선생님
 class Korean_Teacher extends Teacher{
-    
+
     @Override
     public void teach() {
         System.out.println("선생님이 국어를 수업합니다.");
     }
 }
- 
+
 //수학 선생님
 class Math_Teacher extends Teacher{
 
@@ -714,30 +688,26 @@ class English_Teacher extends Teacher{
 }
 ```
 
+## Command Pattern
 
-
-
-
-## 커맨드 패턴(Command)
+- 커맨드 패턴
 
 - 여러 명령들을 추상화하여 오브젝트의 argument를 사용
 
 [커맨드 패턴 보러가기](https://github.com/takm124/DesignPattern/blob/main/src/Command/Command%20Pattern.md)
 
+## Chain of Responsibility Pattern
 
-
-
-
-## 책임 연쇄 패턴(Chain of Responsibility)
+- 책임 연쇄 패턴
 
 - 클라이언트의 요청을 처리하기 위해 객체를 체인 형태로 만들어 결합력을 낮추기 위해 사용함
+
 - 돈을 인출한다고 했을때 10만원 - 5만원 - 만원권으로 인출이 된다고 해보자
+  
   - 4만원을 입력하면 만원권 4개가 나와야하고
   - 6만원을 입력하면 5만원권 1개와 만원권 1개
   - 13만원을 입력하면 10만원권 1개와 3만원권 3개, 이런식으로 인출이 되어야 한다.
   - 그렇다면 필터링을 10만원 - 5만원 - 만원 순서대로 이뤄지게 체인 형태를 만들어 주면 된다.
-
-
 
 코드 출처 - https://donghyeon.dev/design%20pattern/2020/05/11/Chain-of-Responsibility-%ED%8C%A8%ED%84%B4/
 
@@ -853,36 +823,32 @@ public class ChainOfResponsibilityTests {
 }
 ```
 
+## Observer Pattern
 
-
-
-
-## 옵저버 패턴(Observer)
+- 옵저버 패턴
 
 [옵저버 패턴 보러가기](https://github.com/takm124/DesignPattern/blob/main/src/Observer/ObserverPattern.md)
 
+## Memento Pattern
 
-
-
-
-## 메멘토 패턴(Memento)
+- 메멘토 패턴
 
 - 오브젝트의 상태를 메멘토로 기억하여 되돌아갈수 있게 해줌
+  
   - 히스토리를 저장하기 위한 패턴
 
+## Mediator Pattern
+
+- 중재자 패턴
+  
+  
+
+## Visitor Pattern
+
+- 방문자 패턴
 
 
 
+## Iterator Pattern
 
-## 중재자 패턴(Mediator)
-
-
-
-## 방문자 패턴(Visitor)
-
-
-
-## 반복자 패턴(Iterator)
-
-
-
+- 반복자 패턴
