--- a/디자인 패턴 간단 정리.md
+++ b/디자인 패턴 간단 정리.md
@@ -28,8 +28,6 @@
   * [Visitor Pattern](#visitor-pattern)
   * [Iterator Pattern](#iterator-pattern)
 
-
-
 # Creation Pattern
 
 ## Factory Pattern
@@ -149,8 +147,6 @@ public class DogFactory implements AnimalFactory {
 - 추상화 팩토리패턴은 '자동차'를 만드는 Factory가 있을 때 자동차의 argument들을 추상화된 class로 만들어 자유자재로 부품을 끼어주는 역할을 하게 해준다.
 
 [팩토리 메소드 패턴 보러가기](https://github.com/takm124/DesignPattern/blob/main/src/Factory/Factory%20Pattern.md)
-
-
 
 ## Builder Pattern
 
@@ -459,6 +455,7 @@ public class Car extends Vehicle {
   - 가상 인스턴스를 한 곳에 모아놓고 컨트롤 가능하다.
 
 - Java의 String Constant Pool을 생각하면 편하다.
+  
   - 이미 있는 String 문자를 똑같이 가져온다.
 
 ```java
@@ -685,7 +682,7 @@ class English_Teacher extends Teacher{
     public void teach() {
         System.out.println("선생님이 영어를 수업합니다.");
     }
-}
+} 
 ```
 
 ## Command Pattern
@@ -829,26 +826,166 @@ public class ChainOfResponsibilityTests {
 
 [옵저버 패턴 보러가기](https://github.com/takm124/DesignPattern/blob/main/src/Observer/ObserverPattern.md)
 
+  
+
 ## Memento Pattern
 
 - 메멘토 패턴
 
 - 오브젝트의 상태를 메멘토로 기억하여 되돌아갈수 있게 해줌
   
-  - 히스토리를 저장하기 위한 패턴
+  - 오브젝트의 히스토리를 저장하기 위한 패턴
+
+
+
+```java
+public class Cat {
+    int age;
+    int height;
+
+    public void speak() {
+        System.out.println(age + " " + height);
+    }
+
+    public CatMemento createMemento() {
+        CatMemento  cm = new CatMemento(this.age, this.height);
+        return cm;
+    }
+
+    public void restore(CatMemento memento) {
+        this.age = memento.age;
+        this.height = memento.height;
+    }
+}
+
+public class CatMemento {
+    int age;
+    int height;
+    String uuid;
+
+    public CatMemento(int age, int height) {
+        this.age = age;
+        this.height = height;
+        this.uuid = UUID.randomUUID().toString();
+    }
+}
+```
+
+
 
 ## Mediator Pattern
 
 - 중재자 패턴
+- 오브젝트간 결합도를 낮춰주기위해 사용함 ( 직접적 연결을 줄여줌)
+- 채팅 응용프로그램과 같은 메시지 기반 시스템에서 일반적으로 사용됨
+
+
+
+- 코드 출처 : [[자바 디자인 패턴] 행동패턴 - 중재자 패턴](https://xzio.tistory.com/853)
+
+![중재자](https://img1.daumcdn.net/thumb/R1280x0/?scode=mtistory2&fname=https%3A%2F%2Fblog.kakaocdn.net%2Fdn%2F2zRGh%2FbtqZ9BGNBft%2Fi7efXmTzoNtvjNOg9YCRD1%2Fimg.png)
+
+
+
+**ChatRoom Class : ApnaChatRoom, ApnaChatRoomImpl**
+
+```java
+public interface ApnaChatRoom {  
+    public void showMsg(String msg, Participant p);  
+}
+```
+
+```java
+public class ApnaChatRoomImpl implements ApnaChatRoom{  
+    DateFormat dateFormat = new SimpleDateFormat("E dd-MM-yyyy hh:mm a");  
+    Date date = new Date();  
+
+    @Override  
+    public void showMsg(String msg, Participant p) {  
+        System.out.println(p.getName()+"'gets message: "+msg);  
+        System.out.println("\t\t\t\t"+"["+dateFormat.format(date).toString()+"]");    
+    }     
+}
+```
+
+**ChatUser Class : Participant, User**
+
+```java
+public abstract class Participant {  
+    public abstract void sendMsg(String msg);  
+    public abstract void setname(String name);  
+    public abstract String getName();  
+}
+```
+
+```java
+public class User extends Participant {  
+
+    private String name;  
+    private ApnaChatRoom chat;  
+
+    public User(ApnaChatRoom chat){  
+        this.chat = chat;  
+    }  
+
+    @Override  
+    public void sendMsg(String msg) {  
+        chat.showMsg(msg, this);  
+    }  
+
+    @Override  
+    public void setname(String name) {  
+        this.name = name;  
+    }  
+
+    @Override  
+    public String getName() {  
+        return name;  
+    }  
+}
+```
+
+**Operation Class : MediatorPatternDemo**
+
+```java
+public class MediatorPatternDemo {  
+    public static void main(String args[]) {  
+        ApnaChatRoom chat = new ApnaChatRoomImpl();  
+
+        User u1 = new User(chat);  
+        u1.setname("Ashwani Rajput");  
+        u1.sendMsg("Hi Ashwani! how are you?");  
+
+        User u2 = new User(chat);  
+        u2.setname("Soono Jaiswal");  
+        u2.sendMsg("I am Fine ! You tell?");  
+    }  
+}
+```
+
+출처: [[자바 디자인 패턴] 행동패턴 - 중재자 패턴](https://xzio.tistory.com/853) [코딩창고]
+
   
-  
+
+
+
+
 
 ## Visitor Pattern
 
 - 방문자 패턴
+- 오브젝트와 Visitor를 연결하여 Visitor에 있는 메소드를 사용함
+  - 데이터와 데이터를 처리하는 알고리즘을 분리하고 싶을 때 사용함
+  
+  - 데이터 구조는 변하지 않는데 알고리즘이 자주 바뀐다면 사용해볼만 하다.
 
 
+
+  
 
 ## Iterator Pattern
 
 - 반복자 패턴
+- 컬렉션의 구조를 모두 파악하고 있지않더라도 컬렉션을 사용할 수 있게 해줌
+- '반복'기능에 특화되어있음
+- 자바에서도 Iterator를 써본사람이 있다면 이해가 편할 것이다.
